포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 										<p> 깃허브 :<a href="https://github.com/uengae">https://github.com/uengae</a></p>
 										<p> 생년월일 : 1992.05.17</p>
 										<p> 최종학력 : 대구대학교 전산통계학과 졸업</p>
+										<p> 교육이수 내역 : 구디아카데미(클라우드 활용 자바개발자 양성과정)</p>
+										<p> 교육이수 기간 : 2023-04-05 ~ 2023-09-26</p>
+										<p> 자격증 취득 내역: 정보처리기사(필기), SQLD</p>
 									</div>
 								</div>
 							</div>
