프로젝트 내용 수정

--- a/index.html
+++ b/index.html
@@ -277,39 +277,41 @@
 									            			<td colspan ="2">
 									            				<p>상태 : 기능구현 완성, 디자인 개선 및 데이터 추가 완료</p>
 									            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
-									            				<a href="http://3.34.33.114/cash/off/login" target="_blank"><img src ="images/cashbook.jpg" width="90%" height="70%"></a>
+									            				<a href="http://43.201.156.144/cash/login" target="_blank"><img src ="images/cashbook.jpg" width="90%" height="70%"></a>
 									            			</td>
 									            		</tr>
 									            		<tr>
 									            			<td width="100">깃허브 주소</td>
-									            			<td><a href="https://github.com/dinpyo/cashbook">https://github.com/dinpyo/cashbook</a></td>
+									            			<td><a href="https://github.com/uengae/cash">https://github.com/uengae/cash</a></td>
 									            		</tr>										            		
 									            		<tr>
 									            			<td>프로젝트 설명</td>
-									            			<td>Model 2 방식으로 만든 개인 프로젝트입니다.<br>
-									            			     Java의 Calendar API를 이용하여 달력을 만들어 가계부를 구성하였으며,<br>
-									            				 세션을 통해 로그인 기능을 구현하였습니다.<br>
+									            			<td>
+									            				기간 2023.06.30 ~ 2023.07.07<br><br>
+									            				Model 2 방식으로 만든 개인 프로젝트입니다.<br><br>
+									            			    Java의 Calendar API를 이용하여 달력을 만들어 가계부를 구성하였으며,<br><br>
+									            				세션을 통해 로그인 기능을 구현하였습니다.<br><br>
+									            				listener를 이용하여 방분자 수 체크와 현재 접속자를 체크할 수 있도록 구현하였습니다.<br><br>
+									            				filter를 이용하여 모든페이지가 utf-8로 인코딩되게 구현하였습니다.<br><br>
+									            				service를 이용하여 트랜잭션을 구현하였습니다.<br><br>
 									            			</td>
 									            		</tr>
 									            		<tr>
-									            			<!-- 노트북 개발 환경 -->
-									            			<td>개발환경</td>
+								            			<td>개발환경</td>
 									            			<td>OS : Window11<br>
-									            				Library : BootStrap5, MariaDB Java Client(3.1.4), JSTL(1.2), jQuery(3.7.0) <br>
-																Language : Java(JavaSE-17), HTML5, CSS3, JavaScript(ES6) <br>
-																사용 프로그램 : eclipse(2022-12 (4.23.0)), HeidiSQL(11.3.0) <br>
+																Language : Java(JavaSE-17), SQL, jsp<br>
+																사용 프로그램 : eclipse(4.24.0), HeidiSQL(12.3.0)<br>
 																Database : Mariadb(10.5.19) <br>
-																server : tomcat(9.0.75)
-													</td>
+																server : tomcat9.0
+															</td>
 									            		</tr>
 									            		<tr>
-									            			<!-- AWS 설정 -->
 									            			<td>서비스환경</td>
-									            			<td>OS: Ubuntu (18.04.6)<br>
+									            			<td>OS: Ubuntu (18.04.1)<br>
 																Platform : AWS Lightsail<br>
-																Database : MariaDB(18.04.1)<br>
+																Database : MariaDB(10.1.48)<br>
 																Language : Java(17.0.7)
-													</td>
+															</td>
 									            		</tr>
 									            	</table>
 									         </div>
@@ -331,43 +333,44 @@
 									            			<td colspan ="2">
 									            				<p>상태 : 기능구현, 디자인 완성</p>
 									            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
-									            				<a href="http://3.34.33.114/shopping/main/home.jsp" target="_blank"><img src ="images/shopping.jpg" width="90%" height="70%"></a>
+									            				<a href="http://43.201.156.144/shopping/home.jsp" target="_blank"><img src ="images/shopping.jpg" width="90%" height="70%"></a>
 									            			</td>
 									            		</tr>
 									            		<tr>
 									            			<td width="100">깃허브 주소</td>
-									            			<td><a href="https://github.com/GDJ66-7/Shopping-Project">https://github.com/GDJ66-7/Shopping-Project</a></td>
+									            			<td><a href="https://github.com/gdj665/shopping">https://github.com/gdj665/shopping</a></td>
 									            		</tr>									            		
 									            		<tr>
 									            			<td>프로젝트 설명</td>
-									            			<td>MVC model 1 방식으로 만든 첫 팀프로젝트이고 4명이 팀을 이루어 진행하였습니다.<br>
-									            				앞서 했던 개인프로젝트에 비해 DB의 테이블의 개수가 매우 많아짐에 따라 외래키의 불편함과 많아지는 조인문을 경험했습니다.<br>
-									            				Github를 협업으로 처음 사용하다보니 처음엔 커밋 충돌 오류가 많이 났습니다.<br>
-									            				담당하게된 부분은 로그인/로그아웃, 메인화면, 고객센터, 직원 및 고객의 등급변경, 공지사항이며 맡은 부분은 완료를 했습니다.<br>
-									            				session을 이용하여 로그인 화면을 구현했고, JavaScript로 고객탭과 직원탭을 구현했습니다.<br>
-									            				로그아웃은 session.invalidate()를 사용하여 구현했습니다.<br>
-									            				고객 및 직원의 등급 변경은 Jquery를 이용하여 select box의 값이 바뀌면 form이 submit 되도록 하였습니다.<br>
-									            				고객센터와 공지사항은 CRUD와 페이징을 구현했습니다.<br>
+									            			<td>
+									            				기간 2023.05.31 ~ 2023.06.23
+									            				MVC model 1 방식으로 만든 첫 팀프로젝트이고 3명이 팀을 이루어 진행하였고 팀장을 맡았습니다.<br><br>
+									            				앞서 했던 개인프로젝트에 비해 DB의 테이블의 개수가 매우 많아짐에 따라 외래키의 불편함과 많아지는 조인문을 경험했습니다.<br><br>
+									            				Github를 협업으로 처음 사용하다보니 처음엔 커밋 충돌 오류가 많이 났습니다.<br><br>
+									            				담당하게된 부분은 메인화면, 최신앨범, 앨범차트, 국가별 앨범, 검색 기능, 장바구니 및 구매 기본적인 구조, 관리자페이지, 직원 및 고객의 등급변경 등을 하였습니다.<br><br>
+									            				최신앨범은 업로드 기준, 앨범차트는 판매량 기준으로 정렬하였고 국가별 앨범은 카테고리별로 그룹을 나누어 구현했습니다.<br><br>
+									            				검색 기능은 띄어쓰기가 들어가도 검색되게 구현하였습니다.<br><br>
+									            				장바구니와 구매 N대 M DB구조를 구상하고 구현 하였습니다.<br><br>
+									            				관리자페이지의 CRUD를 구현하였습니다.<br>
 									            				<br>
 									            			</td>
 									            		</tr>
 									            		<tr>
 									            			<td>개발환경</td>
 									            			<td>OS : Window11<br>
-									            				Library : BootStrap5, MariaDB Java Client(3.1.4), JSTL(1.2), jQuery(3.7.0) <br>
-																Language : Java(JavaSE-17), HTML5, CSS3, JavaScript(ES6)<br>
-																사용 프로그램 : eclipse(2022-12 (4.23.0)), HeidiSQL(11.3.0)<br>
+																Language : Java(JavaSE-17), SQL, jsp, javascript, jQuery<br>
+																사용 프로그램 : eclipse(4.24.0), HeidiSQL(12.3.0)<br>
 																Database : Mariadb(10.5.19) <br>
-																server : tomcat10.1.11
-													</td>
+																server : tomcat9.0
+															</td>
 									            		</tr>
 									            		<tr>
 									            			<td>서비스환경</td>
-									            			<td>OS: Ubuntu (18.04.6)<br>
+									            			<td>OS: Ubuntu (18.04.1)<br>
 																Platform : AWS Lightsail<br>
-																Database : MariaDB(18.04.1)<br>
+																Database : MariaDB(10.1.48)<br>
 																Language : Java(17.0.7)
-													</td>
+															</td>
 									            		</tr>
 									            	</table>
 									         </div>
@@ -389,37 +392,38 @@
 								            			<td colspan ="2">
 								            				<p>상태 : 기능구현 , 디자인 완성</p>
 								            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
-								            				<a href="http://3.34.33.114/userboard/home.jsp" target="_blank"><img src ="images/userboard.jpg" width="90%" height="70%"></a>
+								            				<a href="http://43.201.156.144/userboard/home.jsp" target="_blank"><img src ="images/userboard.jpg" width="90%" height="70%"></a>
 								            			</td>
 								            		</tr>
 								            		<tr>
 								            			<td width="100">깃허브 주소</td>
-								            			<td><a href="https://github.com/dinpyo/userboard">https://github.com/dinpyo/userboard</a></td>
+								            			<td><a href="https://github.com/uengae/userboard">https://github.com/uengae/userboard</a></td>
 								            		</tr>
 								            		<tr>
 								            			<td>프로젝트 설명</td>
-								            			<td>JSP 방식으로 만든 개인 프로젝트입니다.<br>
-								            			    Java의 Calendar API를 이용하여 달력을 만들어 가계부를 구성하였으며,<br>
-								            				세션을 통해 로그인 기능을 구현하였습니다.<br>
+								            			<td>
+															기간 2023.05.02 ~ 2023.05.15
+								            				JSP를 이용해서 만든 개인 프로젝트입니다.<br><br>
+								            			    기본적인 게시판 CRUD와 댓글, 카테고리 기능을 구현하였습니다.<br><br>
+								            				세션을 통해 로그인 기능을 구현하였습니다.<br><br>
 								            			</td>
 								            		</tr>
 								            		<tr>
 								            			<td>개발환경</td>
 								            			<td>OS : Window11<br>
-								            				Library : BootStrap5, MariaDB Java Client(3.1.4), JSTL(1.2), jQuery(3.7.0) <br>
-															Language : Java(JavaSE-17), HTML5, CSS3, JavaScript(ES6)<br>
-															사용 프로그램 : eclipse(2022-12 (4.23.0)), HeidiSQL(11.3.0)<br>
+															Language : Java(JavaSE-17), SQL, jsp<br>
+															사용 프로그램 : eclipse(4.24.0), HeidiSQL(12.3.0)<br>
 															Database : Mariadb(10.5.19) <br>
-															server : tomcat10.1.11
-												</td>
+															server : tomcat9.0
+														</td>
 								            		</tr>
 								            		<tr>
 								            			<td>서비스환경</td>
-								            			<td>OS: Ubuntu (18.04.6)<br>
+								            			<td>OS: Ubuntu (18.04.1)<br>
 															Platform : AWS Lightsail<br>
-															Database : MariaDB(18.04.1)<br>
+															Database : MariaDB(10.1.48)<br>
 															Language : Java(17.0.7)
-												</td>
+														</td>
 								            		</tr>
 								            	</table>
 									         </div>
