--- a/index.html
+++ b/index.html
@@ -287,10 +287,12 @@
 									            		<tr>
 									            			<td>프로젝트 설명</td>
 									            			<td>
-									            				기간 2023.06.30 ~ 2023.07.07<br><br>
+									            				기간 2023.06.30 ~ 2023.07.14<br><br>
 									            				Model 2 방식으로 만든 개인 프로젝트입니다.<br><br>
 									            			    Java의 Calendar API를 이용하여 달력을 만들어 가계부를 구성하였으며,<br><br>
 									            				세션을 통해 로그인 기능을 구현하였습니다.<br><br>
+									            				cookie를 이용하여 id 저장 기능 구현<br><br>
+									            				ajax를 이용하여 비동기식으로 id, pw 체크 기능을 구현하였습니다.<br><br>
 									            				listener를 이용하여 방분자 수 체크와 현재 접속자를 체크할 수 있도록 구현하였습니다.<br><br>
 									            				filter를 이용하여 모든페이지가 utf-8로 인코딩되게 구현하였습니다.<br><br>
 									            				service를 이용하여 트랜잭션을 구현하였습니다.<br><br>
@@ -299,7 +301,7 @@
 									            		<tr>
 								            			<td>개발환경</td>
 									            			<td>OS : Window11<br>
-																Language : Java(JavaSE-17), SQL, jsp<br>
+																Language : Java(JavaSE-17), SQL, jsp, jQuery, ajax<br>
 																사용 프로그램 : eclipse(4.24.0), HeidiSQL(12.3.0)<br>
 																Database : Mariadb(10.5.19) <br>
 																server : tomcat9.0
