파이널 부분 주석 처리

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 									        </h4>
 									    </div>
 									    
-									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+									    <!-- <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									     	<div class="panel-body">
 									            	<table class="table">
 									            		<tr>
@@ -259,7 +259,7 @@
 									            		</tr>
 									            	</table>								            	
 									         </div>
-									    </div>
+									    </div> -->
 									</div>
 										
 									<!-- 가계부 프로젝트 -->
