사진 수정 css수정

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>허수가 아닌 실수 같은 개발자가 되겠습니다.</strong></p>				
-										<p> Email : humo0517@gmail.com </p>
-										<p> 깃허브 :<a href="https://github.com/uengae">https://github.com/uengae</a></p>
-										<p> 생년월일 : 1992.05.17</p>
-										<p> 최종학력 : 대구대학교 전산통계학과 졸업</p>
-										<p> 교육이수 내역 : 구디아카데미(클라우드 활용 자바개발자 양성과정)</p>
-										<p> 교육이수 기간 : 2023-04-05 ~ 2023-09-26</p>
-										<p> 자격증 취득 내역: 정보처리기사(필기), SQLD</p>
+										<p><strong> 멈춰있는 개발자가 아닌 앞으로 나아가는 개발자가 되겠습니다.</strong></p>				
+										<p><strong> Email </strong> : humo0517@gmail.com </p>
+										<p><strong> 깃허브 </strong>: <a href="https://github.com/uengae">https://github.com/uengae</a></p>
+										<p><strong> 생년월일 </strong>: 1992.05.17</p>
+										<p><strong> 최종학력 </strong>: 대구대학교 전산통계학과 졸업</p>
+										<p><strong> 교육이수 내역 </strong>: 클라우드 활용 자바개발자 양성과정(구디아카데미)</p>
+										<p><strong> 교육이수 기간 </strong>: 2023-04-05 ~ 2023-09-26</p>
+										<p><strong> 자격증 취득 내역 </strong>: 정보처리기사(필기), SQLD</p>
 									</div>
 								</div>
 							</div>
@@ -275,9 +275,9 @@
 									            	<table class="table">
 									            		<tr>
 									            			<td colspan ="2">
-									            				<p>상태 : 기능구현 완성, 디자인 개선 및 데이터 추가 완료</p>
-									            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
 									            				<a href="http://43.201.156.144/cash/login" target="_blank"><img src ="images/cashbook.jpg" width="90%" height="70%"></a>
+									            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
+									            				<p>상태 : 기능구현 완성, 디자인 개선 및 데이터 추가 완료</p>
 									            			</td>
 									            		</tr>
 									            		<tr>
@@ -333,9 +333,9 @@
 									            	<table class="table">
 									            		<tr>
 									            			<td colspan ="2">
-									            				<p>상태 : 기능구현, 디자인 완성</p>
-									            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
 									            				<a href="http://43.201.156.144/shopping/home.jsp" target="_blank"><img src ="images/shopping.jpg" width="90%" height="70%"></a>
+									            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
+									            				<p>상태 : 기능구현, 디자인 완성</p>
 									            			</td>
 									            		</tr>
 									            		<tr>
@@ -392,9 +392,9 @@
 								            	<table class="table">
 								            		<tr>
 								            			<td colspan ="2">
-								            				<p>상태 : 기능구현 , 디자인 완성</p>
-								            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
 								            				<a href="http://43.201.156.144/userboard/home.jsp" target="_blank"><img src ="images/userboard.jpg" width="90%" height="70%"></a>
+								            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
+								            				<p>상태 : 기능구현 , 디자인 완성</p>
 								            			</td>
 								            		</tr>
 								            		<tr>
