--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 									            				Model 2 방식으로 만든 개인 프로젝트입니다.<br><br>
 									            			    Java의 Calendar API를 이용하여 달력을 만들어 가계부를 구성하였으며,<br><br>
 									            				세션을 통해 로그인 기능을 구현하였습니다.<br><br>
-									            				cookie를 이용하여 id 저장 기능 구현<br><br>
+									            				cookie를 이용하여 id 저장 기능 구현하였습니다.<br><br>
 									            				ajax를 이용하여 비동기식으로 id, pw 체크 기능을 구현하였습니다.<br><br>
 									            				listener를 이용하여 방분자 수 체크와 현재 접속자를 체크할 수 있도록 구현하였습니다.<br><br>
 									            				filter를 이용하여 모든페이지가 utf-8로 인코딩되게 구현하였습니다.<br><br>
