사진 수정 및 내용수정

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 									<div class="desc">
 										<h3>JAVA</h3>
 										<p>
-											Model1 방식의 jsp으로만으로 게시판을 만든 것을 시작으로,
-											Model2 mvc방식으로 기본 자바 servlet으로 개인프로젝트,
+											Model1 방식의 jsp기반 게시판을 만든 것을 시작으로,
+											Model2(mvc)방식으로 기본 자바 servlet으로 개인프로젝트,
 											팀프로젝트를 만들고 마지막으로 Spring 프레임 워크를 팀프로젝트로 
 											만들면서 web개발에 있어 자바의 역할과 동적 웹페이지 서비스의 구조를 학습하고 있습니다.
 										</p>
@@ -123,11 +123,12 @@
 									</span>
 									<div class="desc">
 										<h3>DataBase</h3>
-										<p>Maria DB를 중심으로 학습하였고, <br>
+										<p>
+											RDBMS / SQL, oracle, mysql, mariadb 등 학습하였고,<br>
 											프로젝트를 할 때에는 Maria DB를 사용하였습니다.<br>
-											&nbsp;<br>
-											&nbsp;<br>
-											 Oracle DB도 경험하였습니다.</p>
+											개발 위주의 SQL를 사용하였으며, 수업외에 난이도 있는 SQL를 학습하여<br>
+											SQLD자격증과 정보처리기사(필기)를 취득하였습니다.
+										</p>
 									</div>
 								</div>
 							</div>
@@ -141,7 +142,11 @@
 									<div class="desc">
 										<h3>Java Script</h3>
 										<!-- 간단한 콜백함수를 구현 할 수 있고, -->
-										<p> jQuery를 이용하여 AJAX로 외부 URL이나 rest컨트롤러에 JSON타입의 데이터를 요청하여 비동기식 웹페이지 구현이 가능합니다. </p>
+										<p>
+											jQuery를 이용하여 AJAX로 외부 URL이나 rest컨트롤러에 JSON타입의 데이터를 요청하여 갱신없이 데이터를 요청 할 수 있습니다.<br>
+											Canvas API, Calender API, FileSaver API,<br>
+											SheetJS 등 API를 사용하며 학습하고 있습니다.
+										</p>
 									</div>
 								</div>
 							</div>
@@ -202,26 +207,27 @@
 									<!-- 파이널 팀 프로젝트 -->
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
-									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">FINAL Project(팀프로젝트)</a>
-									        </h4>
+								            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+								            	<strong>파이널 팀 프로젝트</strong><br>
+							            		목표 : 전자결재 시스템 구현, 기간 : 기간 2023.08.01 ~ (2주), 개발인원 : 5명
+								            </a>
 									    </div>
 									    
-									    <!-- <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									     	<div class="panel-body">
 									            	<table class="table">
-									            		<tr>
+									            		<!-- <tr>
      												    	<td colspan ="2">
 									            				<p>상태 : 기능구현, 디자인 완료</p>
 									            				<p>이미지를 누르시면 배포 중인 해당 사이트를 확인하실 수있습니다.</p>
 									            				<a href="http://localhost/66platform/integrationPage" target="_blank"><img src ="images/final.png" width="90%" height="70%"></a>
 									            			</td>
-									            		</tr>
+									            		</tr> -->
 									            		<tr>
 									            			<td width="100">깃허브 주소</td>
-									            			<td><a href="https://github.com/goodee-project/66platform">https://github.com/goodee-project/66platform</a></td>
+									            			<td><a href="https://github.com/gdj665/groupware">https://github.com/gdj665/groupware</a></td>
 									            		</tr>										            		
-									            		<tr>
+									            		<!-- <tr>
 									            			<td>프로젝트 설명</td>
 									            			<td>SpringFramework를 사용하여 예약업체, 쇼핑몰, 광고업체 및 업체를 관리하는 통합플랫폼 3개의 조로 나누어 시작했습니다.<br>
 									            				처음엔 팀간의 협업을 통해 요구사항 정의서를 써보았지만 다른 조들의과 의견차이로 결과가 나오지 않았습니다.<br>
@@ -238,37 +244,37 @@
 																FAQ는 등록, 수정, 삭제를 구현했습니다. 조회는 jstl functions의 length와 substring을 사용하여<br>
 																질문이나 답변이 length를 넘어가면 ...으로 뜨도록 구현했습니다.<br>
 									            			</td>
-									            		</tr>
+									            		</tr> -->
 									            		<tr>
 									            			<td>개발환경</td>
 									            			<td>OS : Window11<br>
 									            				Library : Servlet(4.0), BootStrap5, JSTL(1.2), jQuery(3.6.1)<br>
-									            				Language : HTML5, CSS3 , Java(JavaSE-11), JavaScript(ES6)<br>
-																사용 프로그램 : SpringToolSuite4(4.15.3),HeidiSQL(12.3.0)<br>
+									            				Language : HTML5, CSS3 , Java(JavaSE-17), JavaScript(ES6)<br>
+																사용 프로그램 : SpringToolSuite4(4.19.0),HeidiSQL(12.3.0)<br>
 																Database : MariaDB(10.5.19)<br>
-																server : tomcat9.0.68
-													</td>
+																server : tomcat9.0
+															</td>
 									            		</tr>
 									            		<tr>
 									            			<td>서비스환경</td>
-									            			<td>OS: Ubuntu (18.04)<br>
+									            			<td>OS: Ubuntu (18.04.1)<br>
 																Platform : AWS Lightsail<br>
 																Database : MariaDB(10.1.48)<br>
-																Language : Java(11.0.17)
-													</td>
+																Language : Java(17.0.7)
+															</td>
 									            		</tr>
 									            	</table>								            	
 									         </div>
-									    </div> -->
+									    </div>
 									</div>
 										
 									<!-- 가계부 프로젝트 -->
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">가계부 PROJECT(개인프로젝트)
-									            </a>
-									        </h4>
+								            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								            	<strong>두번째 개인 프로젝트</strong><br>
+								            	목표 : 가계부 구현, 기간 : 기간 2023.06.30 ~ 2023.07.14(2주), 개발인원 : 1명
+								            </a>
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 											<div class="panel-body">
@@ -284,6 +290,10 @@
 									            			<td width="100">깃허브 주소</td>
 									            			<td><a href="https://github.com/uengae/cash">https://github.com/uengae/cash</a></td>
 									            		</tr>										            		
+									            		<tr>
+									            			<td width="100">AWS 주소</td>
+									            			<td><a href="http://43.201.156.144/cash/login" target="_blank">http://43.201.156.144/cash/login</a></td>
+									            		</tr>
 									            		<tr>
 									            			<td>프로젝트 설명</td>
 									            			<td>
@@ -323,10 +333,10 @@
 									<!-- 쇼핑몰 팀 프로젝트 -->
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingThree">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">쇼핑몰 PROJECT(세미팀프로젝트)
-									            </a>
-									        </h4>
+								            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+								            	<strong>첫번째 팀 프로젝트</strong><br>
+							            		목표 : 음반 쇼핑몰 구현, 기간 : 기간 2023.05.31 ~ 2023.06.23(4주), 개발인원 : 3명
+								            </a>
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 											<div class="panel-body">
@@ -341,6 +351,10 @@
 									            		<tr>
 									            			<td width="100">깃허브 주소</td>
 									            			<td><a href="https://github.com/gdj665/shopping">https://github.com/gdj665/shopping</a></td>
+									            		</tr>
+									            		<tr>
+									            			<td width="100">AWS 주소</td>
+									            			<td><a href="http://43.201.156.144/shopping/home.jsp" target="_blank">http://43.201.156.144/shopping/home.jsp</a></td>
 									            		</tr>									            		
 									            		<tr>
 									            			<td>프로젝트 설명</td>
@@ -382,10 +396,10 @@
 									<!-- 게시판 프로젝트 -->
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFour">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">게시판 PROJECT(개인프로젝트)
-									            </a>
-									        </h4>
+								            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+								            	<strong>첫번째 개인 프로젝트</strong><br>
+							            		목표 : 게시판 구현, 기간 : 기간 2023.05.02 ~ 2023.05.15(2주), 개발인원 : 1명
+								            </a>
 									    </div>   
 									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 											<div class="panel-body">
@@ -400,6 +414,10 @@
 								            		<tr>
 								            			<td width="100">깃허브 주소</td>
 								            			<td><a href="https://github.com/uengae/userboard">https://github.com/uengae/userboard</a></td>
+								            		</tr>
+								            		<tr>
+								            			<td width="100">AWS 주소</td>
+								            			<td><a href="http://43.201.156.144/userboard/home.jsp" target="_blank">http://43.201.156.144/userboard/home.jsp</a></td>
 								            		</tr>
 								            		<tr>
 								            			<td>프로젝트 설명</td>
